tests/rosetta/out/Scala/a+b.scala
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
object a_b {
  def main() = {
    val a = int(input())
    val b = int(input())
    println(a + b)
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
